<resources>
    <string name="app_name">Biblioteca</string>
    <string name="titulo_principal">My Library</string>
    <string name="email">Email</string>
    <string name="contraseña">Password</string>
    <string name="recordar_email">Remember email</string>
    <string name="iniciar_sesion">Log in</string>
    <string name="coleccion">Collection</string>
    <string name="leidos">Readed books</string>
    <string name="prestamos">Loans</string>
    <string name="contacto">Contact</string>
    <string name="bienvenida">Welcome</string>
    <string name="finSesion">Log Out</string>
    <string name="cerrar_app">Close app</string>
    <string name="errorLogin">User or password are wrong</string>
    <string name="editarLibros">Manage Books</string>
    <string name="telefono">Phone</string>
    <string name="permisoDenegado">Permission Denied</string>
    <string name="localizacion">Location</string>
    <string name="titulo">Title</string>
    <string name="autor">Author</string>
    <string name="genero">Gender</string>
    <string name="icono">Icon</string>
    <string name="añadirLibro">Add Book</string>
    <string name="subgenero">Sub-Gender</string>
    <string name="nuevo_libro">New Book</string>
    <string name="guardar">Save</string>
    <string name="camposObligatorios">All fields are requiered</string>
    <string name="marcarLeido">Set as readed</string>
    <string name="verDetalles">Show Details</string>
    <string name="librosLeidos">Readed Books</string>
    <string name="loginRealizado">Loged!</string>
    <string name="mensajeLogin">"You're logged as "</string>
    <string name="libroAñadido">Book Added</string>
    <string name="cancelado">Operation Cancelled</string>
    <string name="leido">Readed</string>
    <string name="detalles_libro">Book Details</string>
    <string name="volver">Back</string>
    <string name="añadirPrestamo">Add Loan</string>
    <string name="prestamoAñadido">Loan created</string>
    <string name="finalizarPrestamo">Finish Loan</string>
    <string name="nuevo_prestamo">New Loan</string>
    <string name="fechaInicio">Starting Date</string>
    <string name="fechaFin">End Date</string>
</resources>