<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_libro"
        android:textSize="35sp"
        android:textColor="@color/terciario"
        android:textStyle="bold"
        android:layout_marginBottom="60dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titulo"
            android:hint="@string/titulo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:inputType="textCapCharacters" />

        <EditText
            android:id="@+id/autor"
            android:hint="@string/autor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:inputType="textCapCharacters" />

        <EditText
            android:id="@+id/genero"
            android:hint="@string/genero"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:inputType="textCapCharacters" />

        <EditText
            android:id="@+id/subgenero"
            android:hint="@string/subgenero"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:inputType="textCapCharacters" />

        </LinearLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:textColor="@color/principal"
            android:textSize="16sp" />


</LinearLayout>