<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalles_libro"
        android:textSize="35sp"
        android:textColor="@color/terciario"
        android:textStyle="bold"
        android:layout_marginBottom="60dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="200dp"
            android:text="@string/titulo"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/titulo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/autor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/autor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/genero"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/genero"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/subgenero"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="12sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/subgenero"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <CheckBox
            android:id="@+id/leido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leido"
            android:clickable="false"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:textColor="@color/principal"
        android:textSize="16sp" />


</LinearLayout>