<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal"
    android:gravity="center"
    android:orientation="vertical">


            <!--  Imagen menú   -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/biblioteca" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_principal"
                    android:textColor="@color/terciario"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="280dp"
                    android:layout_height="2dp"
                    android:layout_margin="15dp"
                    android:background="@color/secundario" />
            </LinearLayout>

            <!-- Formulario -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="130dp"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Campo de correo -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/email" />

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </LinearLayout>

                <!-- Campo de contraseña -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/candado" />

                    <EditText
                        android:id="@+id/txtContraseña"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/contraseña"
                        android:inputType="textPassword" />

                </LinearLayout>

                <!-- Recordar email -->
                <CheckBox
                    android:id="@+id/chkRecordar"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recordar_email"
                    android:textColor="@color/terciario"
                    android:textSize="16sp" />

                <!-- Botón de inicio de sesión -->
                <Button
                    android:id="@+id/btnIniciar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@color/principal"
                    android:textSize="16sp" />

            </LinearLayout>

</LinearLayout>