<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/principal">

    <!--  Imagen menú   -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:src="@drawable/biblioteca"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/terciario"
            android:text="@string/titulo_principal"/>
        <View
            android:layout_width="280dp"
            android:layout_height="2dp"
            android:background="@color/secundario"
            android:layout_margin="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Llamada -->
        <LinearLayout
            android:id="@+id/contactoLlamada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginRight="125dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:src="@drawable/llamar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/telefono"/>
        </LinearLayout>

        <!-- Contacto Admin -->
        <LinearLayout
            android:id="@+id/datosAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="6dp"
                android:src="@drawable/usuario"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/contacto"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>